fix: Fixed uneven spacing on the projects in the projects section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,7 +109,7 @@ li a:hover {
   text-align: center;
   font-size: 1vw;
 }
-.skills ul li{
+.skills li{
   background-color: gray;
   text-align: center;
   display: inline-block;
@@ -133,10 +133,10 @@ li a:hover {
 .dev div{
   border-right: 2px solid red;
 }
-.dev div ul{
+.dev ul{
   padding: 0px 0px;
 }
-.dev .title{
+.dev h2{
   border-bottom: 2px solid red;
 }
 
@@ -164,32 +164,33 @@ li a:hover {
   grid-template-rows: auto;
 
   margin-top: 25vh;
-  max-height: 50vh;
 }
 
-.project_list div{
+.status{
   display: grid;
   grid-template-columns: auto;
-  gap: 2%;
 }
-.project_list div h2{
+.status h2{
   grid-column-start: 1;
   grid-column-end: span 10;
   grid-auto-columns: auto;
   font-size: 2vw;
 }
-.project_list div div{
+
+.project{
+  grid-column-end: span 2;
   box-shadow: inset 0 0 0 2px red;
   background-color: black;
+  margin: 1vw;
 }
-.project_list div div h3{
+.project h3{
   background-color: gray;
   padding: 10px 10px;
   margin: 1vw;
   grid-column-end: span 19;
   font-size: 1.5vw;
 }
-.project_list div div p{
+.project p{
   min-height: fit-content;
   text-align: center;
   font-size: 1vw;
@@ -197,6 +198,7 @@ li a:hover {
   grid-column-start: 1;
   grid-column-end: span 10;
 }
+
 /* Experience section */
 .experience{
   min-height: 50vh;
